# ForensicHub

./: .gitignore  README.md  pyproject.toml  requirements.txt
ForensicHub/: lazy_maps.py
ForensicHub/cli_funcs/: cli_train_test.py
ForensicHub/common/: __init__.py
ForensicHub/common/backbones/: segformer.py
ForensicHub/common/evaluation/: __init__.py
ForensicHub/common/transforms/: __init__.py  pillow_transforms.py
ForensicHub/common/wrapper/: mask2labelwrapper.py
ForensicHub/statics/doc/: ffdn_train.yaml
ForensicHub/statics/mask2label/: mesorch_train.yaml  trufor_train.yaml
ForensicHub/tasks/aigc/models/fatformer/clip/: clip.py
ForensicHub/tasks/deepfake/: __init__.py
ForensicHub/tasks/document/datasets/: doc_dataset.py
ForensicHub/tasks/document/models/: __init__.py
ForensicHub/tasks/document/models/adcd_net/: __init__.py  adcd_net.py  adcd_net_post_function.py  fph.py  loss.py  restormer.py
ForensicHub/tasks/document/models/dtd/: backbone_convnext.py  backbone_swin.py  dtd.py  fph.py
ForensicHub/tasks/document/models/ffdn/: backbone_convnext.py  dwt.py  ffdn.py
ForensicHub/tasks/document/transforms/: doc_transforms.py
ForensicHub/training_scripts/: test.py  train.py
ForensicHub/training_scripts/trainer/: __init__.py  trainer.py
ForensicHub/training_scripts/utils/: misc.py
weight/: trufor.yaml
